--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Aleksandry Cesar">
     <meta name="Description" content="Conselho Tutelar, dúvidas e respostas">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css">
     <title>Conselho Tutelar - Dúvidas e Respostas</title>
 </head>
@@ -16,9 +17,9 @@
                 <li><a href="Inicio">Inicio</a></li>
                 <li><a href="Inicio">Localização</a></li>
                 <li><a href="telefones-uteis">Telefones Úteis</a></li>
-                <li><a href="telefones-uteis">Perguntas Frequentes</a></li>
-                <li><a href="telefones-uteis">Mensagens Especiais</a></li>
-                <li><a href="?lang=en">Formulário de Contato</a></li>
+                <li><a href="most-requested-questions">Perguntas Frequentes</a></li>
+                <li><a href="special-messages">Mensagens Especiais</a></li>
+                <li><a href="form-contact">Formulário de Contato</a></li>
             </ul>
         </nav>
     </header>  
@@ -26,37 +27,14 @@
 
     <!-- Pretendo colocar aqui as seções --> 
     <article class="informacoes-gerais">
-        <section></section>
-        <section></section>
-    </article>
-    <article class="solicitando-ajuda">
-        <section>
-
+        <section class="left-side">
+            <h1 class="">Conselho Tutelar, o que é?</h1>
+            <p class="">Ele é um órgão que garante os direitos de crianças e adolescentes em todo o território nacional</p>
         </section>
         <section>
-
-        </section>
-        <section>
-
-        </section>
-    </article>
-    <article class="casos-comuns">
-        <section></section>
-        <section></section>
-        <section></section>
-
-    </article>
-    <article class="faq">
-        <section class="perguntas-comuns">
-            <h2>Perguntas frequentes</h2>
-            <details>
-                <summary>Teste</summary>
-                <p>Testando</p>
-            </details>
-            <details>
-                <summary>Teste</summary>
-                <p>Testando</p>
-            </details>
+            <figure>
+                <img src="https://www.gov.br/mdh/pt-br/assuntos/noticias/2023/junho/voce-sabe-para-que-serve-o-conselho-tutelar/whatsapp-image-2023-05-29-at-17-13-08.jpeg/@@images/caef4c68-686a-4567-a5db-c4b872c4f36d.jpeg" alt="simbolo conselho tutelar">
+            </figure>
         </section>
     </article>
 
