--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
     <header>
         <!-- Aqui será a barra de navegação-->
         <nav class="navigation-bar">
-            <ul class="inside-navigation-bar">
+            <div class="begin">
                 <li><a href="Inicio">Inicio</a></li>
-                <li><a href="Inicio">Localização</a></li>
-                <li><a href="telefones-uteis">Telefones Úteis</a></li>
-                <li><a href="most-requested-questions">Perguntas Frequentes</a></li>
-                <li><a href="special-messages">Mensagens Especiais</a></li>
-                <li><a href="form-contact">Formulário de Contato</a></li>
+            </div>
+            <ul class="inside-navigation-bar">
+                <li><a href="#localizacao">Direitos e Deveres</a></li>
+                <li><a href="telefones-uteis">Contatos</a></li>
+                <li><a href="most-requested-questions">FAQ</a></li>
+                <li><a href="special-messages">Área para Professores</a></li>
+                <li><a href="form-contact">Canal de Comunicação</a></li>
             </ul>
+            <div class="emblem">
+                <img src="https://www.gov.br/mdh/pt-br/assuntos/noticias/2023/junho/voce-sabe-para-que-serve-o-conselho-tutelar/whatsapp-image-2023-05-29-at-17-13-08.jpeg/@@images/caef4c68-686a-4567-a5db-c4b872c4f36d.jpeg" alt="simbolo conselho tutelar">
+            </div>
         </nav>
     </header>  
 <body>
@@ -29,18 +34,37 @@
     <article class="informacoes-gerais">
         <section class="left-side">
             <h1 class="">Conselho Tutelar, o que é?</h1>
-            <p class="">Ele é um órgão que garante os direitos de crianças e adolescentes em todo o território nacional</p>
+            <p class=""> 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla posuere in neque sit amet vehicula. Donec posuere sit amet mauris mollis ultrices. Donec a dolor convallis, sollicitudin augue id, porta tortor. Donec maximus non tortor ac euismod. Phasellus vitae sollicitudin mi. Fusce placerat consequat congue. Curabitur consequat, dolor at luctus aliquam, nisi dolor ullamcorper enim, eget aliquam libero eros a velit. Cras sed pulvinar arcu, a laoreet ipsum. Phasellus malesuada ornare eros ut elementum. Nam elementum vestibulum ex et placerat. Sed et luctus mi, et molestie purus. Nunc eget dui in elit tincidunt varius commodo eu lorem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce lobortis, leo sit amet hendrerit egestas, urna massa facilisis magna, eget mattis sapien massa feugiat dolor. Sed in arcu volutpat, rutrum nisl ac, vehicula metus.
+            </p>
         </section>
+    </article>
+
+    <article id="localizacao">
         <section>
-            <figure>
-                <img src="https://www.gov.br/mdh/pt-br/assuntos/noticias/2023/junho/voce-sabe-para-que-serve-o-conselho-tutelar/whatsapp-image-2023-05-29-at-17-13-08.jpeg/@@images/caef4c68-686a-4567-a5db-c4b872c4f36d.jpeg" alt="simbolo conselho tutelar">
-            </figure>
+            <h1>Canais de denuncia</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla posuere in neque sit amet vehicula. Donec posuere sit amet mauris mollis ultrices. Donec a dolor convallis, sollicitudin augue id, porta tortor. Donec maximus non tortor ac euismod. Phasellus vitae sollicitudin mi. Fusce placerat consequat congue. Curabitur consequat, dolor at luctus aliquam, nisi dolor ullamcorper enim, eget aliquam libero eros a velit. Cras sed pulvinar arcu, a laoreet ipsum. Phasellus malesuada ornare eros ut elementum. Nam elementum vestibulum ex et placerat. Sed et luctus mi, et molestie purus. Nunc eget dui in elit tincidunt varius commodo eu lorem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce lobortis, leo sit amet hendrerit egestas, urna massa facilisis magna, eget mattis sapien massa feugiat dolor. Sed in arcu volutpat, rutrum nisl ac, vehicula metus.</p>
+        </section>
+    </article>
+
+    <article class="curiosidades">
+        <section class="separacoes">
+            <aside class="left-localização">Parte 1</aside>
+            <aside class="center-localização">Parte 2</aside>
+            <aside class="right-localização">Parte 3</aside>
         </section>
     </article>
 
     <!-- O rodapé  ficará aqui-->
     <footer>
+        <section class="social-media"> 
 
+ 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla posuere in neque sit amet vehicula. Donec posuere sit amet mauris mollis ultrices. Donec a dolor convallis, sollicitudin augue id, porta tortor. Donec maximus non tortor ac euismod. Phasellus vitae sollicitudin mi. Fusce placerat consequat congue. Curabitur consequat, dolor at luctus aliquam, nisi dolor ullamcorper enim, eget aliquam libero eros a velit. Cras sed pulvinar arcu, a laoreet ipsum. Phasellus malesuada ornare eros ut elementum. Nam elementum vestibulum ex et placerat. Sed et luctus mi, et molestie purus. Nunc eget dui in elit tincidunt varius commodo eu lorem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce lobortis, leo sit amet hendrerit egestas, urna massa facilisis magna, eget mattis sapien massa feugiat dolor. Sed in arcu volutpat, rutrum nisl ac, vehicula metus.</section>
+        <section class="phone"> 
+
+ 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla posuere in neque sit amet vehicula. Donec posuere sit amet mauris mollis ultrices. Donec a dolor convallis, sollicitudin augue id, porta tortor. Donec maximus non tortor ac euismod. Phasellus vitae sollicitudin mi. Fusce placerat consequat congue. Curabitur consequat, dolor at luctus aliquam, nisi dolor ullamcorper enim, eget aliquam libero eros a velit. Cras sed pulvinar arcu, a laoreet ipsum. Phasellus malesuada ornare eros ut elementum. Nam elementum vestibulum ex et placerat. Sed et luctus mi, et molestie purus. Nunc eget dui in elit tincidunt varius commodo eu lorem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce lobortis, leo sit amet hendrerit egestas, urna massa facilisis magna, eget mattis sapien massa feugiat dolor. Sed in arcu volutpat, rutrum nisl ac, vehicula metus.</section>
     </footer>
     <!-- O arquivo JavaScript ficará aqui -->
     <script src="dados.js"></script>
