--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
                 <li><a href="special-messages">Área para Professores</a></li>
                 <li><a href="form-contact">Canal de Comunicação</a></li>
             </ul>
-            <div class="emblem">
-                <img src="https://www.gov.br/mdh/pt-br/assuntos/noticias/2023/junho/voce-sabe-para-que-serve-o-conselho-tutelar/whatsapp-image-2023-05-29-at-17-13-08.jpeg/@@images/caef4c68-686a-4567-a5db-c4b872c4f36d.jpeg" alt="simbolo conselho tutelar">
-            </div>
         </nav>
     </header>  
 <body>
@@ -33,10 +30,9 @@
     <!-- Pretendo colocar aqui as seções --> 
     <article class="informacoes-gerais">
         <section class="left-side">
-            <h1 class="">Conselho Tutelar, o que é?</h1>
-            <p class=""> 
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla posuere in neque sit amet vehicula. Donec posuere sit amet mauris mollis ultrices. Donec a dolor convallis, sollicitudin augue id, porta tortor. Donec maximus non tortor ac euismod. Phasellus vitae sollicitudin mi. Fusce placerat consequat congue. Curabitur consequat, dolor at luctus aliquam, nisi dolor ullamcorper enim, eget aliquam libero eros a velit. Cras sed pulvinar arcu, a laoreet ipsum. Phasellus malesuada ornare eros ut elementum. Nam elementum vestibulum ex et placerat. Sed et luctus mi, et molestie purus. Nunc eget dui in elit tincidunt varius commodo eu lorem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce lobortis, leo sit amet hendrerit egestas, urna massa facilisis magna, eget mattis sapien massa feugiat dolor. Sed in arcu volutpat, rutrum nisl ac, vehicula metus.
-            </p>
+            <h1 class="tit">Conselho Tutelar, o que é?</h1>
+            <p class=""> É um órgão que <strong>defende os direitos de crianças e adolescentes em todo o território nacional</strong>, garantindo para a criança em meio aos seus <strong>direitos de saúde, educação, a vida e ao lazer</strong>.</p>
+            <p class="">Existem diversos pontos e locais em tod</p>
         </section>
     </article>
 
@@ -57,14 +53,8 @@
 
     <!-- O rodapé  ficará aqui-->
     <footer>
-        <section class="social-media"> 
-
- 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla posuere in neque sit amet vehicula. Donec posuere sit amet mauris mollis ultrices. Donec a dolor convallis, sollicitudin augue id, porta tortor. Donec maximus non tortor ac euismod. Phasellus vitae sollicitudin mi. Fusce placerat consequat congue. Curabitur consequat, dolor at luctus aliquam, nisi dolor ullamcorper enim, eget aliquam libero eros a velit. Cras sed pulvinar arcu, a laoreet ipsum. Phasellus malesuada ornare eros ut elementum. Nam elementum vestibulum ex et placerat. Sed et luctus mi, et molestie purus. Nunc eget dui in elit tincidunt varius commodo eu lorem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce lobortis, leo sit amet hendrerit egestas, urna massa facilisis magna, eget mattis sapien massa feugiat dolor. Sed in arcu volutpat, rutrum nisl ac, vehicula metus.</section>
-        <section class="phone"> 
-
- 
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla posuere in neque sit amet vehicula. Donec posuere sit amet mauris mollis ultrices. Donec a dolor convallis, sollicitudin augue id, porta tortor. Donec maximus non tortor ac euismod. Phasellus vitae sollicitudin mi. Fusce placerat consequat congue. Curabitur consequat, dolor at luctus aliquam, nisi dolor ullamcorper enim, eget aliquam libero eros a velit. Cras sed pulvinar arcu, a laoreet ipsum. Phasellus malesuada ornare eros ut elementum. Nam elementum vestibulum ex et placerat. Sed et luctus mi, et molestie purus. Nunc eget dui in elit tincidunt varius commodo eu lorem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce lobortis, leo sit amet hendrerit egestas, urna massa facilisis magna, eget mattis sapien massa feugiat dolor. Sed in arcu volutpat, rutrum nisl ac, vehicula metus.</section>
+        <section class="social-media"></section>
+        <section class="phone"></section>
     </footer>
     <!-- O arquivo JavaScript ficará aqui -->
     <script src="dados.js"></script>
