--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
                 <li><a href="Inicio">Inicio</a></li>
             </div>
             <ul class="inside-navigation-bar">
-                <li><a href="#localizacao">Direitos e Deveres</a></li>
-                <li><a href="telefones-uteis">Contatos</a></li>
-                <li><a href="most-requested-questions">FAQ</a></li>
-                <li><a href="special-messages">Área para Professores</a></li>
-                <li><a href="form-contact">Canal de Comunicação</a></li>
+                <li><a href="direitos.html">Direitos e Deveres</a></li>
+                <li><a href="contatos.html">Contatos</a></li>
+                <li><a href="areaprofessor.html">Área para Professores</a></li>
+                <li><a href="canais.html">Canal de Comunicação</a></li>
             </ul>
         </nav>
     </header>  
